code is running but the results dows make sene

--- a/simple-neural-network.csproj
+++ b/simple-neural-network.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>simple_neural_network</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NumSharp" Version="0.20.4" />
+  </ItemGroup>
+
 </Project>
